# HandsDecksCards

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml  release.yml
src/HandsDecksCards/: HandsDecksCards.pyproj  HandsDecksCards.sln  card.py  deck.py  hand.py  main.py
tests/: test_card.py  test_deck.py  test_hand.py
