[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src/HandsDecksCards/*.py"]
source-includes = ["tests/", "src/HandsDecksCards/HandsDecksCards.sln", "src/HandsDecksCards/HandsDecksCards.pyproj"]

[project]
name = "HandsDecksCards"
version = "1.0.0"
authors = [
  { name="Kevin R. Geurts", email="kevin.r.geurts@gmail.com" },
]
description = "HandsDecksCards provides Python classes representing playing cards, decks of cards, and hands of cards, to be used to create card games."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries :: pygame"
  "Topic :: Games/Entertainment :: Turn Based Strategy",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["playing card", "card", "console", "game", "hand", "deck"]

[project.urls]
Homepage = "https://github.com/KevinRGeurts/HandsDecksCards"
Issues = "https://github.com/KevinRGeurts/HandsDecksCards/issues"
